<resources>
    <string name="app_name">Badger Buzz</string>
    <string name="create_event">Create Event</string>
    <string name="event_name">Add Event Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Enter Email</string>
    <string name="EnterPassword">Enter Password</string>
    <string name="SignUpButton">Sign in</string>
    <string name="NoAccount">Do not have an account? Create One?</string>
    <string name="FilterEvents">Filter Events</string>
    <string-array name="filter_array">
        <item>Filter Events: </item>
        <item>Sporting</item>
        <item>Food</item>
        <item>Social</item>
        <item>Festivals</item>
    </string-array>
    <string name="addEvent">Add Event</string>
    <string name="createAccount">Create Account</string>
    <string name="confirmPassword">Confirm Password</string>
</resources>